Parameterised source repositories too - now source of truth is Django

--- a/params.yaml
+++ b/params.yaml
@@ -1,8 +1,14 @@
 demo-todo-frontend:
+  - name: DEMO_TODO_FRONTEND_REPO_URL
+    type: GIT_REPO_URL
+    description: The URL of the demo-todo-frontend repo, e.g. https://github.com/VersionLens/demo-todo-frontend.git
   - name: DEMO_TODO_FRONTEND_SHA
     type: GIT_COMMIT_SHA
     description: The commit hash of the demo-todo-frontend repo, e.g. ff58cc556269ede04ef6045465aafb2ed5747903
 demo-todo-backend:
+  - name: DEMO_TODO_BACKEND_REPO_URL
+    type: GIT_REPO_URL
+    description: The URL of the demo-todo-backend repo, e.g. https://github.com/VersionLens/demo-todo-backend.git
   - name: DEMO_TODO_BACKEND_SHA
     type: GIT_COMMIT_SHA
     description: The commit hash of the demo-todo-backend repo, e.g. 142b56b046d32eef4dc159359cb29d54a4c02b98
